--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "description": "Discord Leveling Bot with XP system, rank cards, and role rewards",
   "dependencies": {
     "canvas": "^3.2.0",
-    "discord.js": "^14.24.2"
+    "discord.js": "^14.24.2",
     "express": "^4.18.2"
   }
 }
